--- a/Ali.ipynb
+++ b/Ali.ipynb
@@ -20769,8 +20769,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# given a list of lists of words (tokens), return a dict of words and their tf-idf coefficients\n",
     "def tf_idf(tokens):\n",
+    "    \"\"\"\n",
+    "    Given a list of tokens, compute the tf-idf coefficient for each token.\n",
+    "    :param tokens: list of titles split into tokens\n",
+    "    :return: dictionary of tf-idf coefficients\n",
+    "    \"\"\"\n",
     "    # create dictionary\n",
     "    dictionary = corpora.Dictionary(tokens)\n",
     "    \n",
@@ -20795,12 +20799,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# given a dictionnary of tf_id scores and a list of words, return the score of the list of words with smoothing\n",
     "def get_tf_idf_score(tf_idf_scores, words):\n",
+    "    \"\"\"\n",
+    "    Given a dictionary of tf-idf scores and a list of words, compute the average tf-idf score for the list of words.\n",
+    "    :param tf_idf_scores: dictionary of tf-idf scores\n",
+    "    :param words: list of words\n",
+    "    :return: average tf-idf score for the list of words\n",
+    "    \"\"\"\n",
     "    score = 0\n",
     "    for word in words:\n",
     "        score += tf_idf_scores.get(word, 0)\n",
-    "        \n",
+    "\n",
     "    return score / len(words)"
    ]
   }
