--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -122,7 +122,9 @@
   {
    "cell_type": "markdown",
    "id": "ae1d7337-42ec-418c-9329-ce418e4ce076",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Select most popular tech review channels' videos"
    ]
@@ -210,13 +212,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "72dfe17d-0086-4e9a-a5f1-6a823ae4eaa8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████| 6198568/6198568 [2:20:16<00:00, 736.44it/s]\n",
+      "100%|████████████████████████████████████████████████████████████████████| 6198568/6198568 [10:05:14<00:00, 170.69it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# select only the features 'channel_id','display_id','duration','tags','title'\n",
+    "yt_tech_review = yt_metadata[['channel_id','display_id','duration','tags','title']]\n",
+    "\n",
+    "# clean title and tags\n",
+    "yt_tech_review['clean_title'] = yt_tech_review.title.progress_apply(clean_text)\n",
+    "yt_tech_review['clean_tags'] = yt_tech_review.tags.progress_apply(clean_text)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "45f2ee1e-2a17-47a8-b611-75e3cd63ac9b",
    "metadata": {
     "tags": []
    },
    "source": [
-    "##### Method 1 (count the number of all words' occurances in both tags and titles)"
+    "#### Method 1"
    ]
   },
   {
@@ -292,58 +320,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "9116a779-d51d-4f52-b6d9-aea76c705dc8",
-   "metadata": {},
-   "source": [
-    "### Filter tech review videos depending on its title and tags"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "cb456983-d10a-4ed0-b1de-a00182fe291a",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# def get_intersaction(words, words_size, words_common):\n",
-    "#     return np.sum([True if word in words else False for word in words_common]) / words_size\n",
-    "# yt_tech_review.apply(lambda df: get_intersaction(df.title.lower(), len(df.clean_title), titles_common['titles_unique'].unique()), axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "72dfe17d-0086-4e9a-a5f1-6a823ae4eaa8",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████████████████████████████████████████████████████████████████| 6198568/6198568 [2:20:16<00:00, 736.44it/s]\n",
-      "100%|████████████████████████████████████████████████████████████████████| 6198568/6198568 [10:05:14<00:00, 170.69it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# select only the features 'channel_id','display_id','duration','tags','title'\n",
-    "yt_tech_review = yt_metadata[['channel_id','display_id','duration','tags','title']]\n",
-    "\n",
-    "# clean title and tags\n",
-    "yt_tech_review['clean_title'] = yt_tech_review.title.progress_apply(clean_text)\n",
-    "yt_tech_review['clean_tags'] = yt_tech_review.tags.progress_apply(clean_text)\n",
-    "\n",
-    "# count the number of occurances of the most commonly used words in tags and titles in the tags and title of each video\n",
-    "yt_tech_review['tags_occurances_perc'] = yt_tech_review['clean_tags'].apply(lambda tags: 0 if len(tags) == 0 else (np.intersect1d(tags, tags_common['tags_unique'].unique()).shape[0] / len(tags)))\n",
-    "yt_tech_review['title_occurances_perc'] = yt_tech_review['clean_title'].apply(lambda title: 0 if len(title)==0 else (np.intersect1d(title,titles_common['titles_unique'].unique()).shape[0] / len(title)))"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "70500db1-1bdd-4daa-a455-2b8e510cf425",
@@ -352,9 +328,9 @@
    },
    "outputs": [],
    "source": [
-    "####\n",
-    "yt_tech_review.to_csv('yt_tech_review.tsv.gz', sep=\"\\t\", index=False, compression=\"infer\")\n",
-    "####"
+    "# count the number of occurances of the most commonly used words in tags and titles in the tags and title of each video\n",
+    "yt_tech_review['tags_occurances_perc'] = yt_tech_review['clean_tags'].apply(lambda tags: 0 if len(tags) == 0 else (np.intersect1d(tags, tags_common['tags_unique'].unique()).shape[0] / len(tags)))\n",
+    "yt_tech_review['title_occurances_perc'] = yt_tech_review['clean_title'].apply(lambda title: 0 if len(title)==0 else (np.intersect1d(title,titles_common['titles_unique'].unique()).shape[0] / len(title)))"
    ]
   },
   {
@@ -443,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "id": "18710a4f-f5aa-46d3-a794-62488b41a1d0",
    "metadata": {
     "tags": []
@@ -453,13 +429,18 @@
     "# tech review videos only\n",
     "tech_review_videos = yt_tech_review[(yt_tech_review.duration < 1200) & ((yt_tech_review.tags_occurances_perc > 0.5) | (yt_tech_review.title_occurances_perc > 0.5))]\n",
     "\n",
-    "# store tech review videos dataset\n",
-    "yt_metadata[yt_metadata.display_id.isin(tech_review_videos.display_id.unique())].drop('categories',axis=1).reset_index(drop=True).to_csv(PATH_TECH_VIDEOS, sep=\"\\t\", index=False, compression=\"infer\")"
+    "# store tech review videos dataset with clean title/tags\n",
+    "pd.merge(\n",
+    "     yt_metadata[yt_metadata.display_id.isin(tech_review_videos.display_id.unique())].drop('categories',axis=1), \n",
+    "     tech_review_videos[['clean_title','clean_tags','display_id']], \n",
+    "     on='display_id', \n",
+    "     how='left'\n",
+    ").reset_index(drop=True).to_csv(PATH_TECH_VIDEOS, sep=\"\\t\", index=False, compression=\"infer\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "id": "5d3abbaa-9fd1-48b4-858d-845db25c579d",
    "metadata": {
     "tags": []
@@ -471,13 +452,71 @@
        "(178255, 9)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "tech_review_videos.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0962b84d-5ad0-41b2-9fa3-aa6ee6a9f3cb",
+   "metadata": {},
+   "source": [
+    "#### Method 2 (tf idf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "d0324154-d6d9-4ac3-9bf7-6f4e69834d5f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "To be implemented\n",
+    "------------------\n",
+    "input: \n",
+    "    yt_tech_review: yt_metadata with ['channel_id','display_id','duration','tags','title','clean_title','clean_tag']\n",
+    "    all_titles: words used in titles of the most popular tech review youtubers' videos \n",
+    "    all_tags: words used in tags of the most popular tech review youtubers' videos\n",
+    "output:\n",
+    "    DataFrame of tech review videos only\n",
+    "\"\"\";"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9147f12-f3c7-43e1-9070-c5c710fb3613",
+   "metadata": {},
+   "source": [
+    "#### Method 3 (Bayesian)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "3efa2007-33a6-4699-ac52-020573a556fc",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "To be implemented\n",
+    "------------------\n",
+    "input: \n",
+    "    yt_tech_review: yt_metadata with ['channel_id','display_id','duration','tags','title','clean_title','clean_tag']\n",
+    "    all_titles: words used in titles of the most popular tech review youtubers' videos \n",
+    "    all_tags: words used in tags of the most popular tech review youtubers' videos\n",
+    "output:\n",
+    "    DataFrame of tech review videos only\n",
+    "\"\"\";"
    ]
   },
   {
@@ -537,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "id": "f7746f7d-5020-4136-8b9c-221903ec3a79",
    "metadata": {
     "tags": []
@@ -548,12 +587,12 @@
     "tech_review_channels = df_tech_channels[(df_tech_channels.tech_videos_perc > 0.05) & (df_tech_channels.category_cc == 'Science & Technology')]\n",
     "\n",
     "# # store tech review channels dataset\n",
-    "tech_review_channels.drop('category_cc',axis=1).reset_index(drop=True).to_csv(PATH_TECH_CHANNELS, sep=\"\\t\", index=False, compression=\"infer\")"
+    "tech_review_channels.drop(['category_cc','tech_videos_perc'],axis=1).reset_index(drop=True).to_csv(PATH_TECH_CHANNELS, sep=\"\\t\", index=False, compression=\"infer\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "id": "ae436ffc-53d5-4b9d-b16e-0b8815a741ba",
    "metadata": {
     "tags": []
@@ -565,7 +604,7 @@
        "(1193, 10)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,9 +614,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "253a1cfc-e055-4310-8238-14d7def9ee64",
+   "metadata": {},
+   "source": [
+    "### To do\n",
+    "- Store into a new dataframe with all the videos of the classified channels. Get those videos from raw yt_metadata"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13d6c84c-81ed-4dab-964d-8c8375e0c2aa",
+   "id": "744c698a-4819-423b-9976-aa70092e816f",
    "metadata": {},
    "outputs": [],
    "source": []
