--- a/Salma_causal_analysis_channel_growth_after_release.ipynb
+++ b/Salma_causal_analysis_channel_growth_after_release.ipynb
@@ -3810,7 +3810,7 @@
    "id": "47f2b7fd",
    "metadata": {},
    "source": [
-    "### To do for milestone 3 : generalize to other events , do the causal observational analysis (cf. lab5) and plots after the analysis"
+    "### To do for milestone 3: generalize to other events, do the observational study (causal analysis) (cf. lab5) and plots after the analysis"
    ]
   },
   {
