--- a/milestone_2.ipynb
+++ b/milestone_2.ipynb
@@ -1133,7 +1133,7 @@
     }
    ],
    "source": [
-    "print()\n",
+    "print('Spearman correlation between Monthly number of videos and delta subscribers')\n",
     "for channel_name in youtubers_list.values():\n",
     "    corr = stats.spearmanr(tech_3[tech_3.channel_name==channel_name][\"n_videos\"], tech_3[tech_3.channel_name==channel_name]['delta_subs'])\n",
     "    print('{channel}: {corr:.2f}, pvalue={pvalue:.2f}'.format(channel=channel_name,corr=corr.correlation,pvalue=corr.pvalue))"
