--- a/product_types.ipynb
+++ b/product_types.ipynb
@@ -75,9 +75,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['laptop', 'phone', 'camera', 'headphone', 'smart_watches', 'tablet_keywords', 'desktop_setup'])\n"
+     ]
+    }
+   ],
    "source": [
     "# Define the filename for the JSON file\n",
     "keywords_path = DIR + CLEAN + '\\\\product_keywords.json'\n",
