--- a/milestone_2.ipynb
+++ b/milestone_2.ipynb
@@ -38,6 +38,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f70201bb",
    "metadata": {},
    "source": [
     "In this notebook we want to focus on the analysis of tech review channels to understand what are the main factors of success for the YouTubers in this category.\n",
@@ -72,6 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "0b9dd6c3",
    "metadata": {},
    "outputs": [
     {
@@ -290,6 +292,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8fd16672",
    "metadata": {},
    "source": [
     "We filter the videos that have more than 50% of the words of their title or tags are the ones found in the most commongly used words list. Then, we filter the channels that are in Education or Science & Technology category and have more than 5% of their videos in tech review. Note that the category of the channels is assigned by the socialblade platform depending on the last 10 videos published at the time of crawl."
@@ -435,6 +438,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e697ce23",
    "metadata": {},
    "source": [
     "Now from the youtube videos metadata, we want to filter the tech review channels only, keeping all of their videos from original metadata (both tech and non-tech)."
@@ -443,6 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "9b97e602",
    "metadata": {},
    "outputs": [
     {
@@ -511,6 +516,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b8508f66",
    "metadata": {},
    "source": [
     "With that we will be done with preprocessing with 2 datasets in our hand to be used throughout the analysis:\n",
@@ -521,13 +527,16 @@
   {
    "cell_type": "markdown",
    "id": "062042e1-e79f-4ac4-83ac-b38173e1ed24",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Characteristics of successful channels"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "2c866695",
    "metadata": {},
    "source": [
     "### Video duration"
@@ -535,6 +544,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "37bf56d4",
    "metadata": {},
    "source": [
     "Let's start off with the analysis of a video duration. We can take the number of likes and dislikes as metrics of a video. We first want to know if there is any correlation between likes/dislikes and the duration of a video. Below, we are calculating the pearson correlation between the number of like/dislikes and the duration of a video. We decided to do the pearson correlation, as the correlation is linear (to be seen later)"
@@ -543,6 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
+   "id": "b492f0b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,6 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
+   "id": "898f57a9",
    "metadata": {},
    "outputs": [
     {
@@ -620,6 +632,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2b5edcd1",
    "metadata": {},
    "source": [
     "There is a relatively high positive correaltion (that is decreasing across the years), but significant (p_value < 0.05) between the duration of a video and the number of likes it gets. This is different from causation (i.e this does NOT mean that by uploading a longer video we will get more likes) but this nonetheless means that with longer videos we tend to have a bigger number of likes. \n",
@@ -630,6 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
+   "id": "84aa656a",
    "metadata": {},
    "outputs": [
     {
@@ -694,6 +708,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1e285272",
    "metadata": {},
    "source": [
     "We see from the above plot that both number of dislikes and likes have been increasing across the years. Multiple reasons can justify this: for instance this could be due to more users on the platform or more user engagement (users engage with the content and give their opinion which can be positive or negative, instead of saying nothing).\n",
@@ -709,6 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
+   "id": "e3a01335",
    "metadata": {},
    "outputs": [
     {
@@ -743,6 +759,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a5afc2d0",
    "metadata": {},
    "source": [
     "We can see from this plot that generally the longer videos (up to 20m) tend to be liked more by the users, except for the video between 10 - 11 minutes. This could be because of an enormous number of videos on YouTube with this duration, which might include a lot of low quality videos as well, as people usually try to produce videos around 10 minutes. We may of course further analyse it in the next milestone! "
@@ -750,6 +767,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f204fecd",
    "metadata": {},
    "source": [
     "### Upload frequency"
@@ -757,6 +775,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0ba721d0",
    "metadata": {},
    "source": [
     "In this section we want to see the relationship between the frequency of releasing a video with the growth of number of subscribers. We first start by calculating the macro average of time delay (in days) between 2 consequtive videos per channel."
@@ -765,6 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": 261,
+   "id": "84fa23d2",
    "metadata": {},
    "outputs": [
     {
@@ -877,6 +897,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e5285991",
    "metadata": {},
    "source": [
     "Now let's us see the average time delay 10 bins of number of subscribers. In the plot below, every bin is labeled by the largest value in it."
@@ -885,6 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
+   "id": "97f94b93",
    "metadata": {},
    "outputs": [
     {
@@ -922,6 +944,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7066630f",
    "metadata": {},
    "source": [
     "We can already see some trend that the channels with higher number of subscribers tend to publish more frequently. Let's also see how it is correlated with the rate of subscribers growth.\n",
@@ -932,6 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": 263,
+   "id": "21e739a8",
    "metadata": {},
    "outputs": [
     {
@@ -1064,6 +1088,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f9b1af05",
    "metadata": {},
    "source": [
     "Now let us plot the trends"
@@ -1072,6 +1097,7 @@
   {
    "cell_type": "code",
    "execution_count": 264,
+   "id": "9a197c26",
    "metadata": {},
    "outputs": [
     {
@@ -1111,6 +1137,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "df78363c",
    "metadata": {},
    "source": [
     "Here even though it is mostly fluctuation, we can observe that some jumps in the number of videos is followed by the jumps in new subscribers. To be more sure about the correlation, we can also compute the spearman correlation, as the trends are not much linear:"
@@ -1119,6 +1146,7 @@
   {
    "cell_type": "code",
    "execution_count": 265,
+   "id": "36e6b9ae",
    "metadata": {},
    "outputs": [
     {
@@ -1141,6 +1169,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "94cd9aef",
    "metadata": {},
    "source": [
     "Here, we can see for 'UrAvgConsumer' a significant correlation is very clear, and also for the others, there is some correlation even though they are not significant.\n",
@@ -1150,6 +1179,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b219ebac",
    "metadata": {},
    "source": [
     "### Tech products range to review"
@@ -1157,6 +1187,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d3ea21c2",
    "metadata": {},
    "source": [
     "In this section, we are going to analyze if covering a wider range of tech products is more effective to gain more subscribers, or should the channels focus on a specific type of tech.\n",
@@ -1167,6 +1198,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "42a95288",
    "metadata": {},
    "outputs": [
     {
@@ -1286,6 +1318,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "56851d13",
    "metadata": {},
    "source": [
     "Let's see in what categories more successful YouTubers tend to produce tech review videos by plotting the moving average (with window size of 50) of product type percentages over the rank of the YouTubers."
@@ -1294,6 +1327,7 @@
   {
    "cell_type": "code",
    "execution_count": 272,
+   "id": "07ddf7d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1311,6 +1345,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "0ba3a2e4",
    "metadata": {},
    "outputs": [
     {
@@ -1356,6 +1391,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0f926c5e",
    "metadata": {},
    "source": [
     "As we can see, most channels tend to focus on phones, and the higher the channels' rank, the more focus it has on a single product (in our case phones), and as the rank gets lower the ratio of products tend to get closer, meaning the channels are covering wider range of product types.\n",
@@ -1366,6 +1402,7 @@
   {
    "cell_type": "code",
    "execution_count": 273,
+   "id": "3a172901",
    "metadata": {},
    "outputs": [
     {
@@ -1501,6 +1538,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "df0bcbb8",
    "metadata": {},
    "source": [
     "Here we plot some statistics of average delay and average duration of videos, and the number of subscribers distribution. Because both groups are already pretty much balanced we did not further balance the dataset using the propensity score."
@@ -1509,6 +1547,7 @@
   {
    "cell_type": "code",
    "execution_count": 280,
+   "id": "313f63b5",
    "metadata": {},
    "outputs": [
     {
@@ -1543,6 +1582,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "94ec78ef",
    "metadata": {},
    "source": [
     "The distribution of the Wide and Narrow channels shows us that the channels with narrow focus on a particular tech product is almost always domonating (especially as the number of subscribers get higher)."
@@ -1550,6 +1590,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "42f14a5b",
    "metadata": {},
    "source": [
     "# Viewers reaction to big tech product releases"
@@ -1557,6 +1598,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b84a486b",
    "metadata": {},
    "source": [
     "There are various major tech events happening throughout the year, and of course the products released in these events are a great chance for the YouTubers to attract new viewers. In this notebook we are going to analyze the period of release of iPhone X, and see how the viewers reacted to those videos."
@@ -1565,6 +1607,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
+   "id": "80b28f70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1575,6 +1618,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dd2682c0",
    "metadata": {},
    "source": [
     "Below we are getting the daily total number of views from the raw dataset, and finding the ratio of daily sum of views of videos about iphone x to the total views, and plotting the trend over time within 6 months of iphone x release."
@@ -1583,6 +1627,7 @@
   {
    "cell_type": "code",
    "execution_count": 281,
+   "id": "649fd4aa",
    "metadata": {},
    "outputs": [
     {
@@ -1668,6 +1713,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f3f038bd",
    "metadata": {},
    "source": [
     "As we can see from the above plots, September 2017 and November 2017 are all months with very high user interaction with videos about the iPhone. We can also clearly see that the number of views and videos released about the iPhone X reach peaks in September and November 2017. September 2017 is the month where iPhone X was announced and November 2017 is the month where the iPhone X was released.\n",
@@ -1682,6 +1728,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "bd7f07e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1701,6 +1748,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
+   "id": "a8d9c5aa",
    "metadata": {},
    "outputs": [
     {
@@ -1722,6 +1770,7 @@
   {
    "cell_type": "code",
    "execution_count": 287,
+   "id": "dfbf2a34",
    "metadata": {},
    "outputs": [
     {
@@ -1771,6 +1820,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
+   "id": "41142258",
    "metadata": {},
    "outputs": [
     {
@@ -1792,6 +1842,7 @@
   {
    "cell_type": "code",
    "execution_count": 289,
+   "id": "5c032c0f",
    "metadata": {},
    "outputs": [
     {
@@ -1840,6 +1891,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b30ac783",
    "metadata": {},
    "source": [
     "As we can see, topics discussed in the pre-release period and during the release period are very different.\n",
@@ -1858,7 +1910,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ada",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
