correcting conclusion for launch date

--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -21694,13 +21694,12 @@
    "id": "4c670258",
    "metadata": {},
    "source": [
-    "We can see from the two plots above that the channels that started talking about the iPhone X before its release date\\\n",
-    "had a huge boost in their growth.\\\n",
-    "In fact their growth was steadily increasing since the pre-release period and peaked at the release date.\\\n",
-    "We also notive a little bump in the growth of the channels that started talking about the iPhone X before the release date.\n",
+    "We can see that the growth of channels that talked about leaks during the pre-release period of the iphone actually plateaued\\\n",
+    "Everything exciting started right at the release date of the iPhone X.\\\n",
+    "Where we see a steady increase in the growth of the views and the number of subscribers of the channels that talked about leaks.\n",
     "\n",
-    "We can thus conclude that talking about a product before its release date is a good strategy to boost channel growth.\\\n",
-    "You have to make the viewers excited about the product before it is released, and then you can make videos about the product\\"
+    "We can thus conclude that talking about leaks and rumours during the pre-release period might not actually have a big positive impact on the growth of the channel.\\\n",
+    "You might be targetting a small niche of people that want to know the details before the release, but the mainstream audience will only be interested in the product after its release."
    ]
   },
   {
